# basalt

./: Cargo.toml  README.md
BasaltDev/.obsidian/: workspace.json
asset_source/: basic_hex.blend  basic_hex.blend1  basic_hex.mtl
assets/: basic_hex.mtl  default.wgsl  default_instanced.wgsl
crates/basalt/: Cargo.toml
crates/basalt/src/: main.rs
crates/basalt_render/: Cargo.toml
crates/basalt_render/src/: camera.rs  lib.rs  model.rs  pipeline.rs  render_state.rs  renderer.rs  texture.rs
crates/basalt_resource/: Cargo.toml
crates/basalt_resource/src/: lib.rs
crates/hex/: Cargo.toml
crates/hex/src/: hexagon.rs  lib.rs
