[package]
name = "basalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
wgpu = "0.18.0"
winit = "0.28.7"
hex = { path = "../hex"}
basalt_render = { path = "../basalt_render" }
log = "0.4.20"
env_logger = "0.10.0"