[package]
name = "basalt_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.7"
wgpu = "0.18.0"
cfg-if = "1.0.0"
log = "0.4.20"
basalt_resource = { path = "../basalt_resource" }
image = "0.24.7"
anyhow = "1.0.75"
cgmath = "0.18.0"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
tobj = { version = "3.2.1", default-features = false, features = [
    "async"
]}
rand = "0.8.5"
smaa = "0.12.0"